<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/enter_details"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:maxLength="15"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/textBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBar1"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:maxLength="9"
        android:ems="10"
        android:hint="@string/enter_latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/textBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBar2"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:maxLength="10"
        android:ems="10"
        android:hint="@string/enter_longitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/textBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBar3"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:maxLength="6"
        android:hint="@string/enter_radius"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBar4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="setGeofence"
        android:text="@string/button_set_geofence" />

</RelativeLayout>